<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.example.android.legionaryapp.MainActivity">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/back"
                android:padding="8dp"
                android:text="@string/join_us_label"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:src="@drawable/legionary" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/back"
                android:padding="8dp"
                android:text="@string/recruitment_conditions"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <!--Application form where user can input his name and answer few questions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/back"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/application_form_label"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/user_name_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textSize="16sp"
                android:inputType="textCapWords"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/legal_status"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/small_text_style"
                android:text="@string/check_status_details"
                android:textColor="@color/colorAccent"/>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <RadioButton
                    android:id="@+id/roman_citizen_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roman_citizen" />

                <RadioButton
                    android:id="@+id/foederati_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_state_citizen"
                    android:tooltipText="@string/client_state_citizen"/>

                <RadioButton
                    android:id="@+id/slave_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slave" />

            </RadioGroup>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Button to submit the application-->

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/submit_label"
                    />


            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>







</ScrollView>
